SERVER-45409 Rollback should wait for all index builds to complete. Fail rollback-via-refetch on the first attempt if index builds were aborted beforehand